force-app/main/default/objects/QA_Review__c/QA_Review__c.object-meta.xml
<CustomObject>
    <label>QA Review</label>
    <pluralLabel>QA Reviews</pluralLabel>
    <nameField>
        <label>QA Review Name</label>
        <type>AutoNumber</type>
        <displayFormat>QAR-{00000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Stores human QA grader scores alongside AI scores for validation and coaching analysis.</description>
</CustomObject>