force-app/main/default/objects/QA_Review__c/fields/Agent_Name__c.field-meta.xml
<CustomField>
    <fullName>Agent_Name__c</fullName>
    <label>Agent Name</label>
    <type>Text</type>
    <length>255</length>
    <description>Name of the service agent who handled the interaction</description>
</CustomField>