force-app/main/default/objects/QA_Review__c/fields/AI_Active_Listening__c.field-meta.xml
<CustomField>
    <fullName>AI_Active_Listening__c</fullName>
    <label>AI: Active Listening & Needs ID</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>1</scale>
    <description>AI score for Active Listening & Needs ID (max 20)</description>
</CustomField>