force-app/main/default/objects/QA_Review__c/fields/AI_Build_Rapport__c.field-meta.xml
<CustomField>
    <fullName>AI_Build_Rapport__c</fullName>
    <label>AI: Build Rapport</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>1</scale>
    <description>AI score for Build Rapport (max 10)</description>
</CustomField>