force-app/main/default/objects/QA_Review__c/fields/AI_Coaching_Insights__c.field-meta.xml
<CustomField>
    <fullName>AI_Coaching_Insights__c</fullName>
    <label>AI Coaching Insights</label>
    <type>LongTextArea</type>
    <length>131072</length>
    <description>AI-generated coaching recommendations based on score analysis</description>
</CustomField>