force-app/main/default/objects/QA_Review__c/fields/AI_Confirm_Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>AI_Confirm_Next_Steps__c</fullName>
    <label>AI: Confirm Next Steps</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>1</scale>
    <description>AI score for Confirm Next Steps (max 10)</description>
</CustomField>