force-app/main/default/objects/QA_Review__c/fields/AI_Demonstrate_Knowledge__c.field-meta.xml
<CustomField>
    <fullName>AI_Demonstrate_Knowledge__c</fullName>
    <label>AI: Product/Service Knowledge</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>1</scale>
    <description>AI score for Product/Service Knowledge (max 15)</description>
</CustomField>