force-app/main/default/objects/QA_Review__c/fields/AI_Explain_Process__c.field-meta.xml
<CustomField>
    <fullName>AI_Explain_Process__c</fullName>
    <label>AI: Explain Process</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>1</scale>
    <description>AI score for Explain Process (max 10)</description>
</CustomField>