force-app/main/default/objects/QA_Review__c/fields/AI_Handle_Concerns__c.field-meta.xml
<CustomField>
    <fullName>AI_Handle_Concerns__c</fullName>
    <label>AI: Handle Concerns & De-escalation</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>1</scale>
    <description>AI score for Handle Concerns & De-escalation (max 15)</description>
</CustomField>