force-app/main/default/objects/QA_Review__c/fields/AI_Resolution__c.field-meta.xml
<CustomField>
    <fullName>AI_Resolution__c</fullName>
    <label>AI: Resolution & Problem Solving</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>1</scale>
    <description>AI score for Resolution & Problem Solving (max 20)</description>
</CustomField>