force-app/main/default/objects/QA_Review__c/fields/AI_Total_Score__c.field-meta.xml
<CustomField>
    <fullName>AI_Total_Score__c</fullName>
    <label>AI Total Score</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>1</scale>
    <description>Total ai score out of 100</description>
</CustomField>