force-app/main/default/objects/QA_Review__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Voice</fullName><default>false</default><label>Voice</label></value>
            <value><fullName>Messaging</fullName><default>false</default><label>Messaging</label></value>
        </valueSetDefinition>
    </valueSet>
    <description>Channel type of the interaction</description>
</CustomField>