force-app/main/default/objects/QA_Review__c/fields/Grader__c.field-meta.xml
<CustomField>
    <fullName>Grader__c</fullName>
    <label>Grader</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipName>QA_Reviews_Graded</relationshipName>
    <relationshipLabel>QA Reviews Graded</relationshipLabel>
    <description>The human QA grader who scored this interaction</description>
</CustomField>