force-app/main/default/objects/QA_Review__c/fields/Grader_Notes__c.field-meta.xml
<CustomField>
    <fullName>Grader_Notes__c</fullName>
    <label>Grader Notes</label>
    <type>LongTextArea</type>
    <length>32000</length>
    <description>Free-form notes from the human QA grader</description>
</CustomField>