force-app/main/default/objects/QA_Review__c/fields/Human_Active_Listening__c.field-meta.xml
<CustomField>
    <fullName>Human_Active_Listening__c</fullName>
    <label>Human: Active Listening & Needs ID</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>1</scale>
    <description>Human grader score for Active Listening & Needs ID (max 20)</description>
</CustomField>