force-app/main/default/objects/QA_Review__c/fields/Human_Build_Rapport__c.field-meta.xml
<CustomField>
    <fullName>Human_Build_Rapport__c</fullName>
    <label>Human: Build Rapport</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>1</scale>
    <description>Human grader score for Build Rapport (max 10)</description>
</CustomField>