force-app/main/default/objects/QA_Review__c/fields/Human_Confirm_Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Human_Confirm_Next_Steps__c</fullName>
    <label>Human: Confirm Next Steps</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>1</scale>
    <description>Human grader score for Confirm Next Steps (max 10)</description>
</CustomField>