force-app/main/default/objects/QA_Review__c/fields/Human_Demonstrate_Knowledge__c.field-meta.xml
<CustomField>
    <fullName>Human_Demonstrate_Knowledge__c</fullName>
    <label>Human: Product/Service Knowledge</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>1</scale>
    <description>Human grader score for Product/Service Knowledge (max 15)</description>
</CustomField>