force-app/main/default/objects/QA_Review__c/fields/Human_Explain_Process__c.field-meta.xml
<CustomField>
    <fullName>Human_Explain_Process__c</fullName>
    <label>Human: Explain Process</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>1</scale>
    <description>Human grader score for Explain Process (max 10)</description>
</CustomField>