force-app/main/default/objects/QA_Review__c/fields/Human_Handle_Concerns__c.field-meta.xml
<CustomField>
    <fullName>Human_Handle_Concerns__c</fullName>
    <label>Human: Handle Concerns & De-escalation</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>1</scale>
    <description>Human grader score for Handle Concerns & De-escalation (max 15)</description>
</CustomField>