force-app/main/default/objects/QA_Review__c/fields/Human_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Human_Resolution__c</fullName>
    <label>Human: Resolution & Problem Solving</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>1</scale>
    <description>Human grader score for Resolution & Problem Solving (max 20)</description>
</CustomField>