force-app/main/default/objects/QA_Review__c/fields/Human_Total_Score__c.field-meta.xml
<CustomField>
    <fullName>Human_Total_Score__c</fullName>
    <label>Human Total Score</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>1</scale>
    <description>Total human score out of 100</description>
</CustomField>