force-app/main/default/objects/QA_Review__c/fields/Messaging_Session__c.field-meta.xml
<CustomField>
    <fullName>Messaging_Session__c</fullName>
    <label>Messaging Session</label>
    <type>Lookup</type>
    <referenceTo>MessagingSession</referenceTo>
    <relationshipName>QA_Reviews</relationshipName>
    <relationshipLabel>QA Reviews</relationshipLabel>
    <description>The messaging session being reviewed</description>
</CustomField>