force-app/main/default/objects/QA_Review__c/fields/Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Review_Date__c</fullName>
    <label>Review Date</label>
    <type>Date</type>
    <description>Date the human QA review was completed</description>
</CustomField>