force-app/main/default/objects/QA_Review__c/fields/Total_Variance__c.field-meta.xml
<CustomField>
    <fullName>Total_Variance__c</fullName>
    <label>Total Variance</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>1</scale>
    <formula>ABS(AI_Total_Score__c - Human_Total_Score__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
</CustomField>