force-app/main/default/objects/QA_Review__c/fields/Variance_Active_Listening__c.field-meta.xml
<CustomField>
    <fullName>Variance_Active_Listening__c</fullName>
    <label>Variance: Active Listening & Needs ID</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>1</scale>
    <description>Difference between AI and Human score for Active Listening & Needs ID (AI - Human)</description>
</CustomField>