force-app/main/default/objects/QA_Review__c/fields/Variance_Build_Rapport__c.field-meta.xml
<CustomField>
    <fullName>Variance_Build_Rapport__c</fullName>
    <label>Variance: Build Rapport</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>1</scale>
    <description>Difference between AI and Human score for Build Rapport (AI - Human)</description>
</CustomField>