force-app/main/default/objects/QA_Review__c/fields/Variance_Confirm_Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Variance_Confirm_Next_Steps__c</fullName>
    <label>Variance: Next Steps</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>1</scale>
    <formula>AI_Confirm_Next_Steps__c - Human_Confirm_Next_Steps__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
</CustomField>