force-app/main/default/objects/QA_Review__c/fields/Variance_Demonstrate_Knowledge__c.field-meta.xml
<CustomField>
    <fullName>Variance_Demonstrate_Knowledge__c</fullName>
    <label>Variance: Product/Service Knowledge</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>1</scale>
    <description>Difference between AI and Human score for Product/Service Knowledge (AI - Human)</description>
</CustomField>