force-app/main/default/objects/QA_Review__c/fields/Variance_Explain_Process__c.field-meta.xml
<CustomField>
    <fullName>Variance_Explain_Process__c</fullName>
    <label>Variance: Explain Process</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>1</scale>
    <formula>AI_Explain_Process__c - Human_Explain_Process__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
</CustomField>