force-app/main/default/objects/QA_Review__c/fields/Variance_Handle_Concerns__c.field-meta.xml
<CustomField>
    <fullName>Variance_Handle_Concerns__c</fullName>
    <label>Variance: Handle Concerns</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>1</scale>
    <description>Difference between AI and Human score for Handle Concerns & De-escalation (AI - Human)</description>
</CustomField>