force-app/main/default/objects/QA_Review__c/fields/Variance_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Variance_Resolution__c</fullName>
    <label>Variance: Resolution</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>1</scale>
    <formula>AI_Resolution__c - Human_Resolution__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
</CustomField>