force-app/main/default/objects/QA_Review__c/fields/Voice_Call__c.field-meta.xml
<CustomField>
    <fullName>Voice_Call__c</fullName>
    <label>Voice Call</label>
    <type>Lookup</type>
    <referenceTo>VoiceCall</referenceTo>
    <relationshipName>QA_Reviews</relationshipName>
    <relationshipLabel>QA Reviews</relationshipLabel>
    <description>The voice call being reviewed</description>
</CustomField>