force-app/main/default/objects/QA_Review__c/fields/Within_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Within_Threshold__c</fullName>
    <label>Within Threshold (±10)</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>True if AI and Human total scores are within 10 points of each other</description>
</CustomField>